Prevented author tags from wrapping

--- a/2025/02/14/mapping-love-on-campus/style.css
+++ b/2025/02/14/mapping-love-on-campus/style.css
@@ -94,6 +94,7 @@ article {
   border-radius: 0.5rem;
   font-weight: bold;
   line-height: 1.5rem;
+  white-space: nowrap;
 }
 
 .profile-img {
